--- a/src/css/minwidth1349.css
+++ b/src/css/minwidth1349.css
@@ -174,9 +174,9 @@
     }
 
     .homeservices-link span {
-        margin-bottom: -6%;
-        margin-top: 0%;
+        margin-top: -8%;
         font-size: 14px;
+        margin-bottom: -4%;
     }
 
     /* Home Services Finish */
