--- a/src/css/minwidth1800.css
+++ b/src/css/minwidth1800.css
@@ -116,8 +116,8 @@
 
     .homeservices-link span {
         font-size: 20px;
-        margin-top: 0%;
-        margin-bottom: -4%;
+        margin-top: -9%;
+        margin-bottom: -2%;
     }
 
     /* Home Services Finish */
