--- a/src/css/minwidth768.css
+++ b/src/css/minwidth768.css
@@ -314,6 +314,7 @@
         display: table;
         margin: 0 auto;
         padding: 0% 2%;
+
     }
 
     .homeservices-link {
@@ -323,6 +324,7 @@
     .homeservices-link span {
         display: table;
         margin: 0 auto;
+        margin-top: -5%;
         padding-bottom: 2%;
         font-family: "noto serif display", serif;
         text-transform: uppercase;
