--- a/src/css/minwidth992.css
+++ b/src/css/minwidth992.css
@@ -147,7 +147,7 @@
 
     .homeservices-link span {
         margin-bottom: -3%;
-        margin-top: 0%;
+        margin-top: -5%;
         font-size: 13px;
     }
 
